更新《02、KubeSphere》和《04、部署》

--- a/checkpoint-408/04、部署.md
+++ b/checkpoint-408/04、部署.md
@@ -467,6 +467,8 @@ docker push registry.cn-hangzhou.aliyuncs.com/<你的阿里云镜像仓库名>/g
 
 ```shell
 cd gulimall-vue
+npm install
+npm run build
 docker build -t registry.cn-hangzhou.aliyuncs.com/<你的阿里云镜像仓库名>/gulimall-admin-vue-app:v1.0 .
 docker push registry.cn-hangzhou.aliyuncs.com/<你的阿里云镜像仓库名>/gulimall-admin-vue-app:v1.0
 ```
